--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 *.lai
 *.la
 *.a
+
+/proj.ios_mac/HelloCpp.xcodeproj/project.xcworkspace/xcuserdata/belm.xcuserdatad/UserInterfaceState.xcuserstate
